5 -sen erro inicial

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -26,4 +26,5 @@
         completions."
     </string>
     <string name="title_activity_login2">Login</string>
+    <string name="novo_cadastro">Novo Cadastro</string>
 </resources>
