--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -15,7 +15,7 @@
 
     <!-- Strings related to login -->
     <string name="prompt_email">Email</string>
-    <string name="prompt_password">Password (optional)</string>
+    <string name="prompt_password">Password</string>
     <string name="action_sign_in">Sign in or register</string>
     <string name="action_sign_in_short">Sign in</string>
     <string name="error_invalid_email">This email address is invalid</string>
@@ -27,4 +27,5 @@
     </string>
     <string name="title_activity_login2">Login</string>
     <string name="novo_cadastro">Novo Cadastro</string>
+    <string name="cadastrar">Cadastrar</string>
 </resources>
