--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -28,4 +28,5 @@
     <string name="title_activity_login2">Login</string>
     <string name="novo_cadastro">Novo Cadastro</string>
     <string name="cadastrar">Cadastrar</string>
+    <string name="coment_rio">Comentário</string>
 </resources>
