ajustes e erro ao consultar portagens retrofit, sugar ok

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -29,4 +29,5 @@
     <string name="novo_cadastro">Novo Cadastro</string>
     <string name="cadastrar">Cadastrar</string>
     <string name="coment_rio">Comentário</string>
+    <string name="por">Por:</string>
 </resources>
