--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -30,4 +30,5 @@
     <string name="cadastrar">Cadastrar</string>
     <string name="coment_rio">Comentário</string>
     <string name="por">Por:</string>
+    <string name="title_activity_ac__maps">Map</string>
 </resources>
